--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,9 @@ linkedin_username: alexander-gaivoronsky-977b3a1ab
 
 # Additional icon links
 additional_links:
-- title: itsgoingto.be
-  icon: fas fa-globe
-  url: https://www.itsgoingto.be
+- title: t.me
+  icon: fa-brands fa-telegram
+  url: https://t.me/Gaivoronskyi
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
