--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ linkedin_username: alexander-gaivoronsky-977b3a1ab
 # Additional icon links
 additional_links:
 - title: t.me
-  icon: fa-brands fa-telegram
+  icon: fa fa-telegram
   url: https://t.me/Gaivoronskyi
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
