--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,10 @@ additional_links:
 - title: t.me
   icon: fa fa-telegram
   url: https://t.me/Gaivoronskyi
+- title: huggingface.co
+#  icon: fa fa-telegram
+
+  url: https://huggingface.co/Gaivoronsky
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
