--- a/_config.yml
+++ b/_config.yml
@@ -51,9 +51,9 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jfif
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, my name's Alexander and I'm a lead machine learning. As well as machine learning I also have experience MLOps and DevOps. I have worked at a number of companies gaining teamwork and leadership skills.
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  I am most skilled in: <mark>DS</mark> and <mark>Eating Pizza</mark>
 
 content:
   - title: Projects # Title for the section
