--- a/_config.yml
+++ b/_config.yml
@@ -81,13 +81,26 @@ content:
       - layout: left
         title: DataLab
         link: https://datalab.automacon.ru/
-        # link_text: boringcompany.com
         sub_title: Team Lead Data Scientist
         caption: January 2019 - Present
         quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+          Solved the problem of matching anals in the vkusvill store
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+            To solve the problem of comparing analogues, led a data science team that was involved in research and product processes. As a result, the ML service was implemented, the CI/СD integration and control processes for the solution were set up.
+      - layout: left
+        title: DataLab
+        link: https://datalab.automacon.ru/
+        sub_title: Team Lead Data Scientist
+        caption: January 2019 - Present
+        quote: >
+          Solved the problem of a long search for goods by creating a service of text hints when searching for the Vkusville marketplace.
+        description: | # this will include new lines to allow paragraphs
+            To solve the text suggestions problem, he led a team of data scientists that focused on research and product processes. As a result, an architecture was developed based on classical data science approaches, and a pipeline for updating the service and its integration into production was established.
+
+#  - title: Experience # Title for the section
+#    layout: list # Type of content section (list/text)
+#    content:
+
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
