--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ content:
 #          I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
 
   - title: Experience # Title for the section
-    layout: text # Type of content section (list/text)
+    layout: list # Type of content section (list/text)
     content:
       - layout: left
         title: DataLab
@@ -87,7 +87,7 @@ content:
           Solved the problem of matching anals in the vkusvill store
         description: | # this will include new lines to allow paragraphs
             To solve the problem of comparing analogues, led a data science team that was involved in research and product processes. As a result, the ML service was implemented, the CI/СD integration and control processes for the solution were set up.
-      - layout: left
+      - layout: right
         title: DataLab
         link: https://datalab.automacon.ru/
         sub_title: Team Lead Data Scientist
